--- a/manifest.json
+++ b/manifest.json
@@ -5,5 +5,6 @@
     "author": "AI",
     "description": "An advanced text-to-speech generation tool with parsing, voice profiles, and queued playback.",
     "entry": "script.js",
-    "icon": "icon.png"
+    "icon": "icon.png",
+    "homePage": "https://github.com/tdfn00b/tts-extra"
 }
